--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -881,7 +881,6 @@
  PRJ_light_tank_aa_equipment_3:0 "Satnamwa 18 - Kar-Hotwana"
  PRJ_light_tank_aa_equipment_3_short:0 "Saa/18-Kna"
  PRJ_light_tank_aa_equipment_3_desc:0 "A double 50mm anti-air automatic cannon mounted on a Manasiwe 18 chassis."
- 
  PRJ_medium_tank_equipment_1:0 "Metasnwa 4 - Anibesa"
  PRJ_medium_tank_equipment_1_short:0 "Anibesa"
  PRJ_medium_tank_equipment_1_desc:0 "Produced from 1940 to 1942, the Anibesa was multipurpose tank meant to be able to handle the brute fighting against Anglo Atlantean Armor. Its Engine was designed with fuel effieciency in mind. Gave it unparalled range and stamina before it needed to refuel"
@@ -918,8 +917,8 @@
  PRJ_medium_tank_aa_equipment_3:0 "Metasnwa 22 - Kar-Hotwana"
  PRJ_medium_tank_aa_equipment_3_short:0 "Mea/22-Kna"
  PRJ_medium_tank_aa_equipment_3_desc:0 "The Mea/22-Kna" was an experimental anti-air vehicle built from the Tekula's chassis. It never underwent mass production, due to continuous Material shortages."
- PRJ_heavy_tank_equipment_1:0 "Hamanulsa 3 - Adanyi "
- PRJ_heavy_tank_equipment_1_short:0 Adanyi"
+ PRJ_heavy_tank_equipment_1:0 "Hamanulsa 3 - Adanyi"
+ PRJ_heavy_tank_equipment_1_short:0 "Adanyi"
  PRJ_heavy_tank_equipment_1_desc:0 "Designed in 1940, the Hamanulsa and its prototypes showed what was possible if given the chnce, Due to the abysmal infrastructure conditions throughout the rest of africa ment it would never see front line combat and its compenents melted down and used for materials in the war effort.
  PRJ_heavy_tank_artillery_equipment_1:0 "Hamanulsa 3 - Tigardy Axiqan"
  PRJ_heavy_tank_artillery_equipment_1_short:0 "Ham/3-Yam"
@@ -963,68 +962,68 @@
  PRJ_CAS_equipment_1:0 "Wotarnial 118 Anavile"
  PRJ_CAS_equipment_1_short:0 "Wot/118 Anavile"
  PRJ_CAS_equipment_1_desc:0 "The Anavile was a light aircraft built to carry small bombloads. Although lightly armed, it was fast and well armored to sustain ground fire."
- PRJ_CAS_equipment_2:0 "
- PRJ_CAS_equipment_2_short:0 
- PRJ_CAS_equipment_2_desc:0  
- PRJ_CAS_equipment_3:0 
- PRJ_CAS_equipment_3_short:0 
- PRJ_CAS_equipment_3_desc:0 
- PRJ_nav_bomber_equipment_1:0 
- PRJ_nav_bomber_equipment_1_short:0 
- PRJ_nav_bomber_equipment_1_desc:0 
- PRJ_nav_bomber_equipment_2:0 
- PRJ_nav_bomber_equipment_2_short:0 
- PRJ_nav_bomber_equipment_2_desc:0 
- PRJ_nav_bomber_equipment_3:0 
- PRJ_nav_bomber_equipment_3_short:0 
- PRJ_nav_bomber_equipment_3_desc:0  
- PRJ_heavy_fighter_equipment_1:0 
- PRJ_heavy_fighter_equipment_1_short:0 
- PRJ_heavy_fighter_equipment_1_desc:0 
- PRJ_heavy_fighter_equipment_2:0 
- PRJ_heavy_fighter_equipment_2_short:0
- PRJ_heavy_fighter_equipment_2_desc:0 
- PRJ_heavy_fighter_equipment_3:0 
- PRJ_heavy_fighter_equipment_3_short:0 
- PRJ_heavy_fighter_equipment_3_desc:0
- PRJ_tac_bomber_equipment_0:0 
- PRJ_tac_bomber_equipment_0_short:0 
- PRJ_tac_bomber_equipment_0_desc:0 
- PRJ_tac_bomber_equipment_1:0 
- PRJ_tac_bomber_equipment_1_short:0 
- PRJ_tac_bomber_equipment_1_desc:0 
- PRJ_tac_bomber_equipment_2:0 
- PRJ_tac_bomber_equipment_2_short:0 
- PRJ_tac_bomber_equipment_2_desc:0 
- PRJ_tac_bomber_equipment_3:0 
- PRJ_tac_bomber_equipment_3_short:0 
- PRJ_tac_bomber_equipment_3_desc:0 
- PRJ_jet_tac_bomber_equipment_1:0 
- PRJ_jet_tac_bomber_equipment_1_short:0 
- PRJ_jet_tac_bomber_equipment_1_desc:0 
- PRJ_jet_tac_bomber_equipment_2:0 
- PRJ_jet_tac_bomber_equipment_2_short:0 
- PRJ_jet_tac_bomber_equipment_2_desc:0 
- PRJ_strat_bomber_equipment_1_short:0 
- PRJ_strat_bomber_equipment_1_desc:0 
- PRJ_strat_bomber_equipment_2:0 
- PRJ_strat_bomber_equipment_2_short:0 
- PRJ_strat_bomber_equipment_2_desc:0 
- PRJ_strat_bomber_equipment_3:0 
- PRJ_strat_bomber_equipment_3_short:0 
- PRJ_strat_bomber_equipment_3_desc:0 
- PRJ_jet_strat_bomber_equipment_1:0 
- PRJ_jet_strat_bomber_equipment_1_short:0 
- PRJ_jet_strat_bomber_equipment_1_desc:0 
- 
- PRJ_rocket_interceptor_equipment_1:0 
- PRJ_rocket_interceptor_equipment_1_short:0 
- PRJ_rocket_interceptor_equipment_1_desc:0 
- PRJ_rocket_interceptor_equipment_2:0 
- PRJ_rocket_interceptor_equipment_2_short:0 
- PRJ_rocket_interceptor_equipment_2_desc:0 
- PRJ_rocket_interceptor_equipment_3_short:0 
- PRJ_rocket_interceptor_equipment_3_desc:0 
+ #PRJ_CAS_equipment_2:0
+ #PRJ_CAS_equipment_2_short:0 
+ #PRJ_CAS_equipment_2_desc:0  
+ #PRJ_CAS_equipment_3:0 
+ #PRJ_CAS_equipment_3_short:0 
+ #PRJ_CAS_equipment_3_desc:0 
+ #PRJ_nav_bomber_equipment_1:0 
+ #PRJ_nav_bomber_equipment_1_short:0 
+ #PRJ_nav_bomber_equipment_1_desc:0 
+ #PRJ_nav_bomber_equipment_2:0 
+ #PRJ_nav_bomber_equipment_2_short:0 
+ #PRJ_nav_bomber_equipment_2_desc:0 
+ #PRJ_nav_bomber_equipment_3:0 
+ #PRJ_nav_bomber_equipment_3_short:0 
+ #PRJ_nav_bomber_equipment_3_desc:0  
+ #PRJ_heavy_fighter_equipment_1:0 
+ #PRJ_heavy_fighter_equipment_1_short:0 
+ #PRJ_heavy_fighter_equipment_1_desc:0 
+ #PRJ_heavy_fighter_equipment_2:0 
+ #PRJ_heavy_fighter_equipment_2_short:0
+ #PRJ_heavy_fighter_equipment_2_desc:0 
+ #PRJ_heavy_fighter_equipment_3:0 
+ #PRJ_heavy_fighter_equipment_3_short:0 
+ #PRJ_heavy_fighter_equipment_3_desc:0
+ #PRJ_tac_bomber_equipment_0:0 
+ #PRJ_tac_bomber_equipment_0_short:0 
+ #PRJ_tac_bomber_equipment_0_desc:0 
+ #PRJ_tac_bomber_equipment_1:0 
+ #PRJ_tac_bomber_equipment_1_short:0 
+ #PRJ_tac_bomber_equipment_1_desc:0 
+ #PRJ_tac_bomber_equipment_2:0 
+ #PRJ_tac_bomber_equipment_2_short:0 
+ #PRJ_tac_bomber_equipment_2_desc:0 
+ #PRJ_tac_bomber_equipment_3:0 
+ #PRJ_tac_bomber_equipment_3_short:0 
+ #PRJ_tac_bomber_equipment_3_desc:0 
+ #PRJ_jet_tac_bomber_equipment_1:0 
+ #PRJ_jet_tac_bomber_equipment_1_short:0 
+ #PRJ_jet_tac_bomber_equipment_1_desc:0 
+ #PRJ_jet_tac_bomber_equipment_2:0 
+ #PRJ_jet_tac_bomber_equipment_2_short:0 
+ #PRJ_jet_tac_bomber_equipment_2_desc:0 
+ #PRJ_strat_bomber_equipment_1_short:0 
+ #PRJ_strat_bomber_equipment_1_desc:0 
+ #PRJ_strat_bomber_equipment_2:0 
+ #PRJ_strat_bomber_equipment_2_short:0 
+ #PRJ_strat_bomber_equipment_2_desc:0 
+ #PRJ_strat_bomber_equipment_3:0 
+ #PRJ_strat_bomber_equipment_3_short:0 
+ #PRJ_strat_bomber_equipment_3_desc:0 
+ #PRJ_jet_strat_bomber_equipment_1:0 
+ #PRJ_jet_strat_bomber_equipment_1_short:0 
+ #PRJ_jet_strat_bomber_equipment_1_desc:0 
+ #
+ #PRJ_rocket_interceptor_equipment_1:0 
+ #PRJ_rocket_interceptor_equipment_1_short:0 
+ #PRJ_rocket_interceptor_equipment_1_desc:0 
+ #PRJ_rocket_interceptor_equipment_2:0 
+ #PRJ_rocket_interceptor_equipment_2_short:0 
+ #PRJ_rocket_interceptor_equipment_2_desc:0 
+ #PRJ_rocket_interceptor_equipment_3_short:0 
+ #PRJ_rocket_interceptor_equipment_3_desc:0 
  
  
  
