--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -928,7 +928,7 @@
  PRJ_heavy_tank_destroyer_equipment_1_desc:0 "The Ham/3-Ban was a heavy tank destroyer project. Never built, and is only known from blueprints."
  PRJ_heavy_tank_aa_equipment_1:0 "Hamanulsa 3 - Kar-Hotwana"
  PRJ_heavy_tank_aa_equipment_1_short:0 "Ham/3-Kna"
- PRJ_heavy_tank_aa_equipment_1_desc:0 The Ham/3-Ban was a heavy tank Anti-Air project. Never built, and is only known from blueprints."
+ PRJ_heavy_tank_aa_equipment_1_desc:0 "The Ham/3-Ban was a heavy tank Anti-Air project. Never built, and is only known from blueprints."
  PRJ_modern_tank_equipment_1:0 "Juzatzhait-Wotarnial 1001-Atħaŧehedeko"
  PRJ_modern_tank_equipment_1_short:0 "Juz-Wot/1001-Aħz"
  PRJ_modern_tank_equipment_1_desc:0 "After the success of the Juz/801-Aħz, the Atlantean army decided to move to medium multipurpose tanks. This tank was a joint venture of the prestigious Juzatzhait Inc. and the Wotarnial General Systems, to produce a universal tank to fit many different roles. Saw limited action in the Cold War, and was generally liked by its users."
