Atl and map updates

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -79,7 +79,7 @@
  VICTORY_POINTS_13938:0 "Gukiste"
  VICTORY_POINTS_13929:0 "Genagedexat"
  #Avaya
- VICTORY_POINTS_16407:0 "Kešivu"
+ VICTORY_POINTS_16407:0 "New Ishdagahl"
  VICTORY_POINTS_16417:0 "Sumephon"
  VICTORY_POINTS_16413:0 "Zacha"
 #Mu
