--- a/localisation/replace/vanilla_state_names_l_english.yml
+++ b/localisation/replace/vanilla_state_names_l_english.yml
@@ -9,6 +9,7 @@
  STATE_580:0 "Upper Hyperborea"
  STATE_630:0 "Manukai Island" 
  STATE_696:0 "Vejontela"
+ STATE_709:0 "Ahsan Islands"
  STATE_727:0 "Islárida"
  STATE_767:0 "Zerzura"
  STATE_516:0 "Tartaria"
