--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -32,80 +32,84 @@
  STATE_1112:0 "Fuungutai"
  STATE_1113:0 "Havaiki"
  STATE_1072:0 "Hai'ie"
- STATE_835:0 "Hi'e"
- STATE_836:0 "Houkehaka"
- STATE_837:0 "Houla'ana"
- STATE_838:0 "Vashparaq"
- STATE_839:0 "Mauga Maumaututu"
- STATE_840:0 "U'e"
- STATE_841:0 "'Ae"
- STATE_842:0 "Lauwili"
- STATE_843:0 "Purumu"
- STATE_844:0 "Hukilau"
- STATE_845:0 "Toto"
- STATE_846:0 "Ina'i"
- STATE_847:0 "Uafu O Manua"
- STATE_848:0 "Fai'aopoipo"
- STATE_849:0 "Uku"
- STATE_850:0 "Oaoa"
- STATE_851:0 "Hannahland"
- STATE_852:0 "Friendsville"
- STATE_853:0 "Walen"
- STATE_854:0 "Schönland"
- STATE_855:0 "Sofiashavn"
- STATE_856:0 "Navganara"
- STATE_857:0 "Navdrmu"
- STATE_858:0 "Navjijeq"
- STATE_859:0 "Teqmufuz"
- STATE_860:0 "Geq"
- STATE_861:0 "Radaleg"
- STATE_862:0 "Unjarqi"
- STATE_863:0 "Jijeq"
- STATE_864:0 "Mauruuru"
- STATE_865:0 "Blighsland"
- STATE_866:0 "Magellenia"
- STATE_867:0 "Gem Coast"
- STATE_868:0 "Ridleysland"
- STATE_869:0 "Waponi Island"
- STATE_870:0 "Ogish"
- STATE_871:0 "Yimvate"
- STATE_872:0 "Drmu"
- STATE_873:0 "Qeraqama"
- STATE_874:0 "Imriwidi"
- STATE_875:0 "Mirida"
- STATE_876:0 "Imiju"
- STATE_877:0 "Guagoi"
- STATE_878:0 "Gusgutu"
- STATE_879:0 "Behavate"
- STATE_880:0 "Vatpagchi"
- STATE_881:0 "Atulsan"
- STATE_882:0 "Dustartajare"
- STATE_883:0 "Teqsitlti"
- STATE_884:0 "Tollang"
- STATE_885:0 "Yollohtli"
- STATE_886:0 "Debojechet"
- STATE_887:0 "Tesi"
- STATE_888:0 "Zuqurmpoqja"
- STATE_889:0 "King's Thumb"
- STATE_890:0 "Port Laurel"
- STATE_891:0 "Faavavau"
- STATE_892:0 "Kaniwha"
- STATE_893:0 "Awa"
- STATE_894:0 "Vaitafe Matagofie"
- STATE_895:0 "Hou'avae"
- STATE_896:0 "Pugepa"
- STATE_897:0 "Arero"
- STATE_898:0 "Matai'i"
- STATE_899:0 "Auahi"
- STATE_900:0 "Rili"
- STATE_901:0 "Todorovia"
- STATE_902:0 "Poje"
- STATE_903:0 "Opá"
- STATE_904:0 "Nouvelle Bretagne"
- STATE_905:0 "Nouvelle Loire"
- STATE_906:0 "Savoiette"
- STATE_907:0 "Goprug"
- STATE_908:0 "Tlaqua"
+ 
+ STATE_1175:0 "Hi'e"
+ STATE_1176:0 "Houkehaka"
+ STATE_1177:0 "Houla'ana"
+ STATE_1178:0 "Vashparaq"
+ STATE_1179:0 "Mauga Maumaututu"
+ STATE_1180:0 "U'e"
+ STATE_1181:0 "'Ae"
+ STATE_1182:0 "Lauwili"
+ STATE_1183:0 "Purumu"
+ STATE_1184:0 "Hukilau"
+ STATE_1185:0 "Toto"
+ STATE_1186:0 "Ina'i"
+ STATE_1187:0 "Uafu O Manua"
+ STATE_1188:0 "Fai'aopoipo"
+ STATE_1189:0 "Uku"
+ STATE_1190:0 "Oaoa"
+ STATE_1191:0 "Hannahland"
+ STATE_1192:0 "Friendsville"
+ STATE_1193:0 "Walen"
+ STATE_1194:0 "Schönland"
+ STATE_1195:0 "Sofiashavn"
+ STATE_1196:0 "Navganara"
+ STATE_1197:0 "Navdrmu"
+ STATE_1198:0 "Navjijeq"
+ STATE_1199:0 "Teqmufuz"
+ STATE_1200:0 "Geq"
+ STATE_1201:0 "Radaleg"
+ STATE_1202:0 "Unjarqi"
+ STATE_1203:0 "Jijeq"
+ STATE_1204:0 "Mauruuru"
+ STATE_1205:0 "Blighsland"
+ STATE_1206:0 "Magellenia"
+ STATE_1207:0 "Gem Coast"
+ STATE_1208:0 "Ridleysland"
+ STATE_1209:0 "Waponi Island"
+ STATE_1210:0 "Ogish"
+ STATE_1211:0 "Yimvate"
+ STATE_1212:0 "Drmu"
+ STATE_1213:0 "Qeraqama"
+ STATE_1214:0 "Imriwidi"
+ STATE_1215:0 "Mirida"
+ STATE_1216:0 "Imiju"
+ STATE_1217:0 "Guagoi"
+ STATE_1218:0 "Gusgutu"
+ STATE_1219:0 "Behavate"
+ STATE_1220:0 "Vatpagchi"
+ STATE_1221:0 "Atulsan"
+ STATE_1222:0 "Dustartajare"
+ STATE_1223:0 "Teqsitlti"
+ STATE_1224:0 "Tollang"
+ STATE_1225:0 "Yollohtli"
+ 
+ STATE_1126:0 "Debojechet"
+ 
+ STATE_1227:0 "Tesi"
+ STATE_1228:0 "Zuqurmpoqja"
+ STATE_1229:0 "King's Thumb"
+ STATE_1230:0 "Port Laurel"
+ STATE_1231:0 "Faavavau"
+ STATE_1232:0 "Kaniwha"
+ STATE_1233:0 "Awa"
+ STATE_1234:0 "Vaitafe Matagofie"
+ STATE_1235:0 "Hou'avae"
+ STATE_1236:0 "Pugepa"
+ STATE_1237:0 "Arero"
+ STATE_1238:0 "Matai'i"
+ STATE_1239:0 "Auahi"
+ STATE_1240:0 "Rili"
+ STATE_1241:0 "Todorovia"
+ STATE_1242:0 "Poje"
+ STATE_1243:0 "Opá"
+ STATE_1244:0 "Nouvelle Bretagne"
+ STATE_1070:0 "Nouvelle Loire"
+ STATE_1065:0 "Savoiette"
+ STATE_1066:0 "Goprug"
+ STATE_1245:0 "Tlaqua"
+ 
  STATE_909:0 "Uiqaqtel"
  STATE_910:0 "Canaje"
  STATE_911:0 "Nocal"
@@ -262,12 +266,9 @@
  STATE_1062:0 "Chaansau"
  STATE_1063:0 "Central Ackerson"
  STATE_1064:0 "Oeyamon"
- STATE_1065:0 "Kaffa-Sidamo"
- STATE_1066:0 "Hararghe-Bale"
  STATE_1067:0 "Nilotia"
- STATE_1068:0 "Melilani"
  STATE_1069:0 "Eastern Congo"
- STATE_1070:0 "Great Rift Valley"
+
  STATE_1071:0 "South Lake"
  STATE_1072:0 "West Virginia"
  STATE_1073:0 "Yabishee"
@@ -345,3 +346,4 @@
  STATE_1172:0 "Pays des Fjords" 
  STATE_1173:0 "Montglaciale" 
  STATE_1174:0 "Mecafarie"
+ STATE_1246:0 "Kingdom of Saguenay"
