--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -932,36 +932,36 @@
  PRJ_modern_tank_equipment_1:0 "Juzatzhait-Wotarnial 1001-Atħaŧehedeko"
  PRJ_modern_tank_equipment_1_short:0 "Juz-Wot/1001-Aħz"
  PRJ_modern_tank_equipment_1_desc:0 "After the success of the Juz/801-Aħz, the Atlantean army decided to move to medium multipurpose tanks. This tank was a joint venture of the prestigious Juzatzhait Inc. and the Wotarnial General Systems, to produce a universal tank to fit many different roles. Saw limited action in the Cold War, and was generally liked by its users."
- PRJ_modern_tank_artillery_equipment_1:0 "Juzatzhait-Wotarnial 1001-Aŧehedeko"
- PRJ_modern_tank_artillery_equipment_1_short:0 "Juz-Wot/1001-Az"
- PRJ_modern_tank_artillery_equipment_1_desc:0 "Featuring a high caliber short mortar, the Juz-Wot/1001-Az was designed to destroy soft targets at ranges of under 1km, at the expense of accuracy, rate of fire, armor penetration and safety. Its caseless ammunition was regarded as dangerous, and after the second self-ignition incident, the vehicle was phased out of service."
- PRJ_modern_tank_destroyer_equipment_1:0 "Juzatzhait-Wotarnial 1001-Hauniħutrakitdunerade"
- PRJ_modern_tank_destroyer_equipment_1_short:0 "Juz-Wot/1001-Huħ"
- PRJ_modern_tank_destroyer_equipment_1_desc:0 "Designed as a dual anti-air/anti-tank vehicle, it excelled in the latter. Carrying up to 12 guided multipurpose missiles, it could easily target enemy vehicles at ranges exceeding 4km, well beyond the range of regular cannons."
- PRJ_modern_tank_aa_equipment_1:0 "Juzatzhait-Wotarnial 1001-Haéirsexpleinrade"
- PRJ_modern_tank_aa_equipment_1_short:0 "Juz-Wot/1001-Hés"
- PRJ_modern_tank_aa_equipment_1_desc:0 "The Juz-Wot/1001-Hés was the first self-propelled anti-air platform to incorporate a radar into it. Had a great success into a variety of roles, and was in service from 1952 up until 1991."
- PRJ_fighter_equipment_0:0 "Wright-Asorsak Model 3 Żavók"
- PRJ_fighter_equipment_0_short:0 "Wri-Aso 3 Żavók"
- PRJ_fighter_equipment_0_desc:0 "The Żavók was the first airplane to enter service into the then neglected Atlantean Air Force. Woefully inadequate for its time, it was maintained in service until the years prior to the outbreak of the World War 2."
- PRJ_fighter_equipment_1:0 "Wright-Asorsak 013 Čiénet"
- PRJ_fighter_equipment_1_short:0 "Wri-Aso/013 Čiénet"
- PRJ_fighter_equipment_1_desc:0 "A well-rounded airplane, the Čiénet was the first fighter to meet the requirements of the Atlantean Air Force after its massive program to modernize its squadrons."
- PRJ_fighter_equipment_2:0 "Satexregekaz-Miganutahamek 313 Iwunral"
- PRJ_fighter_equipment_2_short:0 "Sat-Mig/313 Iwunral"
- PRJ_fighter_equipment_2_desc:0 "The first production model from the Army Aviation Research Group. Went into full production in late 1940, in time to fight over France and Germany."
- PRJ_fighter_equipment_3:0 "Satexregekaz-Miganutahamek 613 Temlipe"
- PRJ_fighter_equipment_3_short:0 "Sat-Mig/613 Temlipe"
- PRJ_fighter_equipment_3_desc:0 "The Temlipe was the last of the propeller-powered fighters of Atlantis. Agile, fast and dependable, it was a far-cry from the early and unrealiable Atlantean fighters."
- PRJ_jet_fighter_equipment_1:0 "Satexregekaz-Miganutahamek 025 Dinax"
- PRJ_jet_fighter_equipment_1_short:0 "Sat-Mig/025 Dinax"
- PRJ_jet_fighter_equipment_1_desc:0 "The Dinax was the first Atlantean jet to be built. Produced in limited quantities and saw no combat action."
- PRJ_jet_fighter_equipment_2:0 "Satexregekaz-Miganutahamek 525 Gegit"
- PRJ_jet_fighter_equipment_2_short:0 "Sat-Mig/025 Gegit"
- PRJ_jet_fighter_equipment_2_desc:0 "The Gegit was a swept wing jet fighter aircraft meant to supplant every other fighter and interceptor in service in 1948. Saw extensive action during the cold war, and was exported to a few countries around the world."
- PRJ_CAS_equipment_1:0 "Wotarnial 118 Anavile"
- PRJ_CAS_equipment_1_short:0 "Wot/118 Anavile"
- PRJ_CAS_equipment_1_desc:0 "The Anavile was a light aircraft built to carry small bombloads. Although lightly armed, it was fast and well armored to sustain ground fire."
+ #PRJ_modern_tank_artillery_equipment_1:0 "Juzatzhait-Wotarnial 1001-Aŧehedeko"
+ #PRJ_modern_tank_artillery_equipment_1_short:0 "Juz-Wot/1001-Az"
+ #PRJ_modern_tank_artillery_equipment_1_desc:0 "Featuring a high caliber short mortar, the Juz-Wot/1001-Az was designed to destroy soft targets at ranges of under 1km, at the expense of accuracy, rate of fire, armor penetration and safety. Its caseless ammunition was regarded as dangerous, and after the second self-ignition incident, the vehicle was phased out of service."
+ #PRJ_modern_tank_destroyer_equipment_1:0 "Juzatzhait-Wotarnial 1001-Hauniħutrakitdunerade"
+ #PRJ_modern_tank_destroyer_equipment_1_short:0 "Juz-Wot/1001-Huħ"
+ #PRJ_modern_tank_destroyer_equipment_1_desc:0 "Designed as a dual anti-air/anti-tank vehicle, it excelled in the latter. Carrying up to 12 guided multipurpose missiles, it could easily target enemy vehicles at ranges exceeding 4km, well beyond the range of regular cannons."
+ #PRJ_modern_tank_aa_equipment_1:0 "Juzatzhait-Wotarnial 1001-Haéirsexpleinrade"
+ #PRJ_modern_tank_aa_equipment_1_short:0 "Juz-Wot/1001-Hés"
+ #PRJ_modern_tank_aa_equipment_1_desc:0 "The Juz-Wot/1001-Hés was the first self-propelled anti-air platform to incorporate a radar into it. Had a great success into a variety of roles, and was in service from 1952 up until 1991."
+ #PRJ_fighter_equipment_0:0 "Wright-Asorsak Model 3 Żavók"
+ #PRJ_fighter_equipment_0_short:0 "Wri-Aso 3 Żavók"
+ #PRJ_fighter_equipment_0_desc:0 "The Żavók was the first airplane to enter service into the then neglected Atlantean Air Force. Woefully inadequate for its time, it was maintained in service until the years prior to the outbreak of the World War 2."
+ #PRJ_fighter_equipment_1:0 "Wright-Asorsak 013 Čiénet"
+ #PRJ_fighter_equipment_1_short:0 "Wri-Aso/013 Čiénet"
+ #PRJ_fighter_equipment_1_desc:0 "A well-rounded airplane, the Čiénet was the first fighter to meet the requirements of the Atlantean Air Force after its massive program to modernize its squadrons."
+ #PRJ_fighter_equipment_2:0 "Satexregekaz-Miganutahamek 313 Iwunral"
+ #PRJ_fighter_equipment_2_short:0 "Sat-Mig/313 Iwunral"
+ #PRJ_fighter_equipment_2_desc:0 "The first production model from the Army Aviation Research Group. Went into full production in late 1940, in time to fight over France and Germany."
+ #PRJ_fighter_equipment_3:0 "Satexregekaz-Miganutahamek 613 Temlipe"
+ #PRJ_fighter_equipment_3_short:0 "Sat-Mig/613 Temlipe"
+ #PRJ_fighter_equipment_3_desc:0 "The Temlipe was the last of the propeller-powered fighters of Atlantis. Agile, fast and dependable, it was a far-cry from the early and unrealiable Atlantean fighters."
+ #PRJ_jet_fighter_equipment_1:0 "Satexregekaz-Miganutahamek 025 Dinax"
+ #PRJ_jet_fighter_equipment_1_short:0 "Sat-Mig/025 Dinax"
+ #PRJ_jet_fighter_equipment_1_desc:0 "The Dinax was the first Atlantean jet to be built. Produced in limited quantities and saw no combat action."
+ #PRJ_jet_fighter_equipment_2:0 "Satexregekaz-Miganutahamek 525 Gegit"
+ #PRJ_jet_fighter_equipment_2_short:0 "Sat-Mig/025 Gegit"
+ #PRJ_jet_fighter_equipment_2_desc:0 "The Gegit was a swept wing jet fighter aircraft meant to supplant every other fighter and interceptor in service in 1948. Saw extensive action during the cold war, and was exported to a few countries around the world."
+ #PRJ_CAS_equipment_1:0 "Wotarnial 118 Anavile"
+ #PRJ_CAS_equipment_1_short:0 "Wot/118 Anavile"
+ #PRJ_CAS_equipment_1_desc:0 "The Anavile was a light aircraft built to carry small bombloads. Although lightly armed, it was fast and well armored to sustain ground fire."
  #PRJ_CAS_equipment_2:0
  #PRJ_CAS_equipment_2_short:0 
  #PRJ_CAS_equipment_2_desc:0  
