The Monster of Africa

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -15,13 +15,12 @@
  VICTORY_POINTS_9786:0 "Wilmington"
  VICTORY_POINTS_10859:0 "Wakanda"
  VICTORY_POINTS_12929:0 "Fragneilo"
- VICTORY_POINTS_15002:0 "Tol Ahrem"
  VICTORY_POINTS_15001:0 "Qarghi"
  VICTORY_POINTS_15004:0 "Qapeta"
  VICTORY_POINTS_16340:0 "Qapsabeyt"
  VICTORY_POINTS_14576:0 "Nakhlagluta"
  VICTORY_POINTS_12929:0 "Fragneilo"
- VICTORY_POINTS_16343:0 "Tol Ahrem"
+ VICTORY_POINTS_16343:0 "Qalqol"
  VICTORY_POINTS_16345:0 "Qapeta"
  VICTORY_POINTS_16342:0 "Qarghi"
  VICTORY_POINTS_13062:0 "Chersky"
@@ -34,7 +33,15 @@
  VICTORY_POINTS_2900:0 "Fryannovsk"
  VICTORY_POINTS_4859:0 "Kutur-Ogly"
  VICTORY_POINTS_2923:0 "Chernogorsk"
- 
+ VICTORY_POINTS_16509:0 "Dol Qinamba"
+ VICTORY_POINTS_16510:0 "Jeputyi"
+ VICTORY_POINTS_11145:0 "Guru"
+ VICTORY_POINTS_16511:0 "Tol Ahrem"
+ VICTORY_POINTS_16344:0 "Betlayi Lewimen"
+ VICTORY_POINTS_16513:0 "Dalsban"
+ VICTORY_POINTS_16341:0 "Qeriu"
+ VICTORY_POINTS_16512:0 "Horr"
+ VICTORY_POINTS_16514:0 "Galdama"
  
  #Australia
  VICTORY_POINTS_8186:0 "Port Augusta"
