--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -3,7 +3,7 @@
  roderiq_nightmare_genius:0 "Brilliant Mind"
  
  #Characters
- PRJ_King_Roderiq:0 "King Roderiq I"
+ PRJ_King_Roderiq:0 "Roderiq Hierosolimitanus"
  PRJ_Amfri_Yuriye:0 "Amfri Yuriye"
 
  PRJ_Warqneh_Hassbah:0 "Warqneh Hassbah"
