Monster of Africa Part 1

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -64,12 +64,33 @@
  PRJ_core_priority_desc:0 "We focus on whats best for the core."
  PRJ_outer_priority:0 "The Hinterland"
  PRJ_outer_priority_desc:0 "We must protect the hinterland so they can trust us to defend them"
+ PRJ_chemical_warfare_idea:0 "Chemical Warfare"
+ PRJ_chemical_warfare_idea_desc:0 "The rest of the world may hate it. But if we stand a chance at victory we must use them."
+ 
+ PRJ_extremist_tactics_idea:0 "Extremist Tactics"
+ PRJ_extremist_tactics_idea_desc:0 "Outnumbered, outgunned, but not out of spirit."
+ PRJ_extremist_tactics_idea_2:0 "Fundamentalist Tactics"
+ PRJ_extremist_tactics_idea_2_desc:0 "Once shattered strength is so fragile, break them before they break us"
+ 
+ 
+ 
+ 
+ 
  #foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
  PRJ_save_ethiopia_desc:0 "The imperialist forces of a fallen Rome march on one of the last free african nations. Lord Narqana suggests we intervene immediatly to save our neighbors."
- PRJ_abandon_ethiopia:0 "Leave Ethiopia to Her Fate"
- PRJ_abandon_ethiopia_desc:0 "The imperialist forces of a fallen Rome march on one of the last free african nations. Lord Ilmapane suggests we let the Ethiopians sort it out. Yohannian blood must not be spilled."
+ PRJ_abandon_ethiopia:0 "League of Nations Summit"
+ PRJ_abandon_ethiopia_desc:0 "The imperialist forces of a fallen Rome march on one of the last free African nations. While the LoN has decided not to help, should Emperor Selassie ask us directly we will be more than happy to assist."
  
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
  #Left
  PRJ_steady_as_she_goes:0 "Status Quo"
  PRJ_steady_as_she_goes_desc:0 "The situation outside of the country is too chaotic, let us not do anything radical."
@@ -269,3 +290,48 @@
  PRJ_artillery_gear_desc:0 "Send them to God with shells from the sky. What He does with their souls afterwards is not our concern."
  PRJ_train_gear:0 "The Power of Trains"
  PRJ_train_gear_desc:0 "Time and time again we have been remined of the power of rails and the revolutionary ways in which they change war. From the Franco-Prussian War to the Anglo-Yohannian War to the Great War the locomotive has drastically improved the supply lines for modern armies."
+ 
+ PRJ_increase_aluminium:0 "Aluminium Production"
+ PRJ_increase_aluminium_desc:0 "Our Industry is growing but the raw materials are not, we must remedy this!"
+ 
+ PRJ_increase_steel:0 "Steel Production"
+ PRJ_increase_steel_desc:0 "Our Industry is growing but the raw materials are not, we must remedy this!"
+ 
+ PRJ_expanded_logging:0 "Logging Industry"
+ PRJ_expanded_logging_desc:0 "The Logging Industry has taken a great notice of the easily accessable wood. The ask to harvest it to be made into stocks for our weapons."
+ 
+ PRJ_chemical_warfare:0 "Chemical Warfare"
+ PRJ_chemical_warfare_desc:0 "'Every change of sensation in the nose and mouth nags in the mind, it creates utter confusion eroding the soldiers inner strength.' -Fritz Haber, Father of toxic gas and chemical warfare."
+ 
+ PRJ_extremist_tactics:0 "Extremist Tactics"
+ PRJ_extremist_tactics_desc:0 "People who have the ability to change something in this world, have the guts to abandon things important to them if they have to." 
+ PRJ_extremist_tactics_2:0 "Fundamentalist Tactics"
+ PRJ_extremist_tactics_2_desc:0 "People so devoted to the cause of war. Truley a terrifying force on the field." 
+ 
+ PRJ_light_med_tanks_2:0 "More Tanks"
+ PRJ_light_med_tanks_2_desc:0 "While we would love to further develop both tanks and mechanized trucks the budget is getting tighter so we can only develop one." 
+ PRJ_mechanization_2:0 "More Trucks"
+ PRJ_mechanization_2_desc:0 "While we would love to further develop both tanks and mechanized trucks the budget is getting tighter so we can only develop one." 
+ 
+ PRJ_infantry_gear_2:0 "More Rifles"
+ PRJ_infantry_gear_2_desc:0 "While we would love to further develop both Rifles and Artilery the budget is getting tighter so we can only develop one." 
+ PRJ_artillery_gear_2:0 "More Artilery"
+ PRJ_artillery_gear_2_desc:0 "While we would love to further develop both Rifles and Artilery the budget is getting tighter so we can only develop one." 
+ 
+ PRJ_heavy_fighter_2:0 "More Heavy Fighters"
+ PRJ_heavy_fighter_2_desc:0 "While we would love to further develop both Heavy Fighters and Bombers the budget is getting tighter so we can only develop one." 
+ PRJ_tac_bomber_2:0 "More Tactical Bombers"
+ PRJ_tac_bomber_2_desc:0 "While we would love to further develop both Heavy Fighters and Bombers the budget is getting tighter so we can only develop one." 
+ 
+ PRJ_light_fighter_2:0 "More Fighters"
+ PRJ_light_fighter_2_desc:0 "While we would love to further develop both Fighters and CAS the budget is getting tighter so we can only develop one." 
+ PRJ_cas_bomber_2:0 "More Close Air Support"
+ PRJ_cas_bomber_2_desc:0 "While we would love to further develop both Fighters and CAS the budget is getting tighter so we can only develop one." 
+ 
+ PRJ_chemical_research:0 "Chemical Research Bureau"
+ PRJ_chemical_research_desc:0 "Having a dedicated facility to researching chemicals will benefit us greatly."
+ 
+ PRJ_rift_tungsten:0 "Tungsten Mines"
+ PRJ_rift_tungsten_desc:0 "Before the Anglo-Yohannian war 30 years ago we had prospected future mines in the area. WIth the Rift Valley back in our control, its time to open them up."
+ PRJ_david_university:0 "Fragneilo University"
+ PRJ_david_university_desc:0 "Home to our most advance industry its only natural the Fragneilo University would further expand to house more prospective scientists and researchers."S
