Monster of Africa 2

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -73,7 +73,9 @@
  PRJ_extremist_tactics_idea_2_desc:0 "Once shattered strength is so fragile, break them before they break us"
  
  
- 
+ PRJ_dutch_expertise:0 "Dutch Recomendations"
+ PRJ_afrikaans:0 "Dutch Afrikaan Migration"
+ PRJ_french_expertise:0 "French Expertise"
  
  
  #foci
@@ -333,4 +335,44 @@
  PRJ_rift_tungsten:0 "Tungsten Mines"
  PRJ_rift_tungsten_desc:0 "Before the Anglo-Yohannian war 30 years ago we had prospected future mines in the area. WIth the Rift Valley back in our control, its time to open them up."
  PRJ_david_university:0 "Fragneilo University"
- PRJ_david_university_desc:0 "Home to our most advance industry its only natural the Fragneilo University would further expand to house more prospective scientists and researchers."S
+ PRJ_david_university_desc:0 "Home to our most advance industry its only natural the Fragneilo University would further expand to house more prospective scientists and researchers."
+ 
+ #Democracy Foci 
+ PRJ_constitutional_reforms:0 "Constitutional Reforms"
+ PRJ_constitutional_reforms_desc:0 "TBA"
+ PRJ_invite_dutch:0 "Dutch Contitutional Advisers"
+ PRJ_invite_dutch_desc:0 "TBA"
+ PRJ_reign_in_religion:0 "Reign in the Religious Houses"
+ PRJ_reign_in_religion_desc:0 "TBA"
+ PRJ_queens_taming:0 "Queens Taming"
+ PRJ_queens_taming_desc:0 "Roderiq is a hothead, has been since his childhood. If we dont get him under control he will tear this kingdom apart"
+ 
+ PRJ_roderiq_yields:0 "Constitutional Convention"
+ PRJ_roderiq_yields_desc:0 "With public support for less centralized power Roderiq has decided to call a constitutional convention to discuss and debate a reformed constitution."
+ PRJ_roderiq_refuses:0 "Roderiq Refuses"
+ PRJ_roderiq_refuses_desc:0 "Roderiq clearly wont give up the reigns willingly, Paranoid that the entire world is out to get them. He clearly is in no position to be king and should be removed"
+ 
+ PRJ_dutch_guarantees:0 "Dutch Guarantees"
+ PRJ_dutch_guarantees_desc:0 "TBA"
+ PRJ_relinquish_hinterland:0 "Relinquish claims on the Hinterland"
+ PRJ_relinquish_hinterland_desc:0 "TBA"
+ PRJ_afrikaan_influx:0 "The Dutch Afrikaans"
+ PRJ_afrikaan_influx_desc:0 "The South Africans continue to oppress the Boars, they are more than welcome to settle in Yohannia"
+ PRJ_western_research:0 "Dutch-Yohannian Research Initiiative"
+ PRJ_western_research_desc:0 "TBA"
+ 
+ PRJ_free_ethiopia:0 "Demands for cooperation"
+ PRJ_free_ethiopia_desc:0 "We must make it clear that under no circumstances that should we involve ourself in a war involving Europe, that Ethiopia will be freed in the end."
+ PRJ_french_expertise:0 "Import French Expertise"
+ PRJ_french_expertise_desc:0 "TBA"
+ PRJ_british_relations:0 "Normalize British Relations"
+ PRJ_british_relations_desc:0 "TBA"
+ 
+PRJ_purchase_kenya_new:0 "Purchase Kenya"
+PRJ_purchase_kenya_new_desc:0  "While Ethiopia is recovering from her war with the ittalians its about time we got a coastline of our own"
+PRJ_new_kenya_docks:0 "Lifeline to the world"
+PRJ_new_kenya_docks_desc:0 "Trade, the life blod of nations, with our new coast we shall survivee for evermore"
+PRJ_return_of_wakanda:0 "Return of Wakanda"
+PRJ_return_of_wakanda_desc:0 "While we never asked for Wakanda to return, britain as a sign of good will has gifted us our former province back!"
+PRJ_the_horn:0 "The Horn Compact"
+PRJ_the_horn_desc:0 "Somallia is Unruly but her former master must never have it back, Avahya has come to us saying she will take care of it in exchange for a burgening alliance."
