--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -369,10 +369,13 @@
  PRJ_british_relations_desc:0 "TBA"
  
 PRJ_purchase_kenya_new:0 "Purchase Kenya"
-PRJ_purchase_kenya_new_desc:0  "While Ethiopia is recovering from her war with the ittalians its about time we got a coastline of our own"
+PRJ_purchase_kenya_new_desc:0  "While Ethiopia is recovering from her war with the Italians its about time we got a coastline of our own. With Enough gold it should be easy to sway Britain to relinquish Kenya."
 PRJ_new_kenya_docks:0 "Lifeline to the world"
 PRJ_new_kenya_docks_desc:0 "Trade, the life blod of nations, with our new coast we shall survivee for evermore"
 PRJ_return_of_wakanda:0 "Return of Wakanda"
 PRJ_return_of_wakanda_desc:0 "While we never asked for Wakanda to return, britain as a sign of good will has gifted us our former province back!"
 PRJ_the_horn:0 "The Horn Compact"
 PRJ_the_horn_desc:0 "Somallia is Unruly but her former master must never have it back, Avahya has come to us saying she will take care of it in exchange for a burgening alliance."
+
+PRJ_down_with_the_king:0 "Down with the King"
+PRJ_down_with_the_king_desc:0 "It appears that soon this country will meet its fate, torn to pieces by its people, crumbled under their hate. The masses claim that justice will be brought on us today. But Roderiq won't see it through, they will not get their way!"
