Monster of Africa 2

--- a/localisation/aml_opinion_modifiers_l_english.yml
+++ b/localisation/aml_opinion_modifiers_l_english.yml
@@ -21,3 +21,5 @@
  neighbor_love:0 "Good Neighbor Relations"
  trs_bankrupt_dirtbags_focus:0 "Bankrupt Debtor"
  HOU_commie_friends:0 "Friends of the Revolution"
+ PRJ_SOV_friend:0 "Comrades in Arms"
+ PRJ_dutch_expertise:0 "Dutch Recomendations"
