--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -73,7 +73,6 @@
  PRJ_extremist_tactics_idea_2_desc:0 "Once shattered strength is so fragile, break them before they break us"
  
  
- PRJ_dutch_expertise:0 "Dutch Recomendations"
  PRJ_afrikaans:0 "Dutch Afrikaan Migration"
  PRJ_french_expertise:0 "French Expertise"
  
@@ -368,14 +367,103 @@
  PRJ_british_relations:0 "Normalize British Relations"
  PRJ_british_relations_desc:0 "TBA"
  
-PRJ_purchase_kenya_new:0 "Purchase Kenya"
-PRJ_purchase_kenya_new_desc:0  "While Ethiopia is recovering from her war with the Italians its about time we got a coastline of our own. With Enough gold it should be easy to sway Britain to relinquish Kenya."
-PRJ_new_kenya_docks:0 "Lifeline to the world"
-PRJ_new_kenya_docks_desc:0 "Trade, the life blod of nations, with our new coast we shall survivee for evermore"
-PRJ_return_of_wakanda:0 "Return of Wakanda"
-PRJ_return_of_wakanda_desc:0 "While we never asked for Wakanda to return, britain as a sign of good will has gifted us our former province back!"
-PRJ_the_horn:0 "The Horn Compact"
-PRJ_the_horn_desc:0 "Somallia is Unruly but her former master must never have it back, Avahya has come to us saying she will take care of it in exchange for a burgening alliance."
+ PRJ_purchase_kenya_new:0 "Purchase Kenya"
+ PRJ_purchase_kenya_new_desc:0  "While Ethiopia is recovering from her war with the Italians its about time we got a coastline of our own. With Enough gold it should be easy to sway Britain to relinquish Kenya."
+ PRJ_new_kenya_docks:0 "Lifeline to the world"
+ PRJ_new_kenya_docks_desc:0 "Trade, the life blod of nations, with our new coast we shall survivee for evermore"
+ PRJ_return_of_wakanda:0 "Return of Wakanda"
+ PRJ_return_of_wakanda_desc:0 "While we never asked for Wakanda to return, britain as a sign of good will has gifted us our former province back!"
+ PRJ_the_horn:0 "The Horn Compact"
+ PRJ_the_horn_desc:0 "Somallia is Unruly but her former master must never have it back, Avahya has come to us saying she will take care of it in exchange for a burgening alliance."
 
-PRJ_down_with_the_king:0 "Down with the King"
-PRJ_down_with_the_king_desc:0 "It appears that soon this country will meet its fate, torn to pieces by its people, crumbled under their hate. The masses claim that justice will be brought on us today. But Roderiq won't see it through, they will not get their way!"
+ PRJ_down_with_the_king:0 "Down with the King"
+ PRJ_down_with_the_king_desc:0 "It appears that soon this country will meet its fate, torn to pieces by its people, crumbled under their hate. The masses claim that justice will be brought on us today. But Roderiq won't see it through, they will not get their way!"
+
+ PRJ_theocracy:0 "A Religious State"
+ PRJ_theocracy_desc:0 "We can no longer deny it. Our people have long been a religious people and we must acknowledge the Hand of God in our lives at all times. Which version of God we shall all worship is the question at hand."
+
+ PRJ_islam_fascism:0 "§GMuhammad is the Messenger of Allah§!"
+ PRJ_islam_fascism_desc:0 "Islam brings a more perfect understanding of Allah and we will bring the knowledge of the faith to the people by word or by sword."
+ PRJ_islam_party:0 "Islamic Council"
+ PRJ_islam_long:0 "Islamic Council"
+
+ PRJ_christian_fascism:0 "§YFor Christ§!"
+ PRJ_christian_fascism_desc:0 "Our Christian ancestors, kings and generals of the Great Crusades, brought Christianity to this benighted land centuries ago. We must continue their work and finish it."
+ PRJ_christian_long:0 "Christian Conuslate"
+ PRJ_christian_party:0 "Christian Conuslate"
+
+ PRJ_jewish_fascism:0 "§2Jehovah is a Jealous God§!"
+ PRJ_jewish_fascism_desc:0 "Our nation was founded by the People of God. We must not allow our people to stray from the words of Moses his servant."
+ PRJ_jewish_long:0 "Jehovah's Council"
+ PRJ_jewish_party:0 "Jehovah's Council"
+
+ PRJ_islam_2:0 "Call for Jihad"
+ PRJ_islam_2_desc:0 "The faithful of Islam will answer our call to cleanse the nation of the unfaithful dogs. We must not allow the infidels any room to fight against our righteous forces."
+
+ PRJ_islamic_help:0 "Islamic Warriors from across the world come to help establish an Islamic State"
+ 
+ PRJ_islam_palestine:0 "Palestine for Assistance"
+ PRJ_islam_palestine_desc:0 "If Britain wants our assistance then they will release Palestine and Jordon post haste"
+ 
+ PRJ_christian_2:0 "Appeal to the European Powers for Aid "
+ PRJ_christian_2_desc:0 "Despite our many past differences with the colonial powers we must ask the aid of fellow Christians to help us pacify the Jew and subject the Moslem to our rightful, God-given authority."
+ 
+ PRJ_christian_help:0 "The Pope himself has called upon the christian world to assist us in our cause."
+ 
+ PRJ_jewish_2:0 "Purification and Sanctification"
+ PRJ_jewish_2_desc:0 "We must rid our nation of these upstart religions, Christianity and Islam. They are the religions of foreign invaders and they must be removed."
+ PRJ_jewish_help:0 "The Jewish Diaspora of the world looking for a homeland have begun pouring into our lands looking to assist in our cause."
+ 
+ PRJ_jew_israel:0 "Israel for Assistance"
+ PRJ_jew_israel_desc:0"If Britain wants our assistance then they will create Israel and release Jordon post haste"
+ PRJ_theorcracic_rule:0 "Theocractic State"
+ PRJ_theorcracic_rule_desc:0 "The Lord is the Lord, he's got a right to speak his will through us!"
+ 
+ PRJ_religious_tax:0 "Religious Tax"
+ PRJ_religious_tax_desc:0 "The people are partly free to contune practicing their faiths, but they will be taxed  heavily until they see the light of the one true god."
+ 
+ PRJ_athiest_begone:0 "Athiests Begone"
+ PRJ_athiest_begone:0 "The faithlus have no place in this state, BEGONE!"
+ 
+ PRJ_religious_teachings:0 "Establish Religious Schools"
+ PRJ_religious_teachings_desc:0 "We must educate the people of the one true god"
+ 
+ PRJ_karfa_sidamo:0 "Ethiopian Lands"
+ PRJ_karfa_sidamo_desc:0 "To house the sudden migrations to the newly formed theocracy we need space to house them all. Lucky for us Italy's control of ethiopia is weak and such we should be able to take the place over when the time isright."
+ 
+ PRJ_calm_atlast:0 "Era of Calm"
+ PRJ_calm_atlast_desc:0 "It took alot of blood, sweat and tears, but at last the population is finally under control"
+ 
+ PRJ_syndicalism:0 "Return of Lexande"
+ PRJ_syndicalism_desc:0 "How Lexande was smuggled back into the country we dont know. The soviets are certainly responsible."
+ 
+ PRJ_syndicalism_fight:0 "Return of Lexande"
+ PRJ_syndicalism_fight_desc:0 "I was a sacrifice to a scornful king, a coward. Roderiq will pay the price for his arrogance!"
+ 
+ PRJ_syndicalism_flee:0 "The King Flees"
+ PRJ_syndicalism_flee_desc:0 "That Coward Roderiq has fled to europe. He will be back at somepoint."
+ PRJ_roderiq_flees:0 "Roderiq Flees to France"
+ 
+ PRJ_syndicalism_3:0 "Consildate Power"
+ PRJ_syndicalism_3_desc:0 "The wokers have taken the country! nows the time to restructure ourselves accordingly."
+ 
+ PRJ_recognise_ussr:0 "Recognize the Soviet Union"
+ PRJ_recognise_ussr_desc:0 "The Soviet Union under the old king denied the existance of a worker state. We shall reach out to the Soviets and make overtures of friendship"
+ 
+ PRJ_eye_britain:0 "Red Wave of Africa"
+ PRJ_eye_britain_desc:0 "Roderiq maybe gone but in classified documents it clear who his target was. We shall procede with his old plans but for the benifit of the workers of the world."
+ 
+ PRJ_army_infiltration:0 "Infiltrate Raj troops"
+ PRJ_army_infiltration:0 "Its to obvious on skintone alone that we cant directly inflatrate Britain, so we'll worm into her crown jewl instead, the Raj"
+ 
+ PRJ_naval_infiltration:0 "The British Navy"
+ PRJ_naval_infiltration_desc:0 "Disguising as Native Qalchs should make it abit easier to see what the British are upto will be benificial" 
+ 
+ PRJ_aviation_infiltration:0 "Eye in the sky"
+ PRJ_aviation_infiltration_desc:0 "Hiding in London as Raj Citizens allow us a nupclose view of their airforce"
+ 
+ PRJ_civilian_infiltration:0 "Egyptiain Intel"
+ PRJ_civilian_infiltration:0 "Theirs alot of Industry in Egypt, best make not of it so we can free the workers  when we get there."
+ 
+ PRJ_red_dawn:0 "Equitorial Sun"
+ PRJ_red_dawn_desc:0 "The blood of the nile shall run read from those who oppose the glorious workers state."
