--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -22,12 +22,12 @@
  NAF_FEDERATION_communism:0 "Treaty of North Atlantic Socialist Republics"
  NAF_FEDERATION_communism_DEF:0 "the Treaty of North Atlantic Socialist Republics"
  
- PRJ_Islam:0 "Islamic State of Yahya"
- PRJ_Islam_def:0 "the Islamic State of Yahya"
- PRJ_Christian:0 "Prester John"
- PRJ_Christian_def:0  "the land of Prester John"
- PRJ_Jewish:0 "Beta Israel"
- PRJ_Jewish_def:0 "the land of Beta Israel"
+ PRJ_Islam_fascism:0 "Islamic State of Yahya"
+ PRJ_Islam_fascism_def:0 "the Islamic State of Yahya"
+ PRJ_Christian_fascism:0 "Prester John"
+ PRJ_Christian_fascism_def:0  "the land of Prester John"
+ PRJ_Jewish_fascism:0 "Beta Israel"
+ PRJ_Jewish_fascism_def:0 "the land of Beta Israel"
  SCP_ENG_autonomy_dominion:0 "Dominion of Scotia"
  SCP_ENG_autonomy_colony:0 "Scotia Confederation"
  SCP_ENG_autonomy_puppet:0 "Province of Scotia"
