State Names Update

--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -2,7 +2,7 @@
  STATE_271:0 "Tigray-Shewa"
  STATE_357:0 "Rhode Island"
  STATE_521:0 "South Queensland"
- STATE_674:0 "Auralia"
+ STATE_871:0 "Auralia"
  STATE_696:0 "Vejontela"
  STATE_1087:0 "Utukalla"
  STATE_1088:0 "Rengtsiu"
@@ -85,7 +85,7 @@
  STATE_1224:0 "Tollang"
  STATE_1225:0 "Yollohtli"
  
- STATE_1126:0 "Debojechet"
+ STATE_1226:0 "Debojechet"
  
  STATE_1227:0 "Tesi"
  STATE_1228:0 "Zuqurmpoqja"
@@ -267,6 +267,7 @@
  STATE_1063:0 "Central Ackerson"
  STATE_1064:0 "Oeyamon"
  STATE_1067:0 "Nilotia"
+ STATE_1068:0 "Melilani Hills"
  STATE_1069:0 "Eastern Congo"
 
  STATE_1071:0 "South Lake"
@@ -318,7 +319,8 @@
  STATE_1144:0 "Kenzarakseran"
  STATE_1145:0 "Princess Elizabeth Land"
  STATE_1146:0 "Wrangel Island"
- STATE_1147:0 "Chirikov Island"
+ STATE_875:0 "Chirikov Island"
+ STATE_1147:0 "Girgu"
  STATE_1148:0 "Hogland Archipelago"
  STATE_1149:0 "Avahya Archipelago"
  STATE_1150:0 "Panghuzitz Island"
