--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -1,42 +1,131 @@
 ﻿l_english:
  STRATEGICREGION_1:0 "Southern England"
- STRATEGICREGION_71:0 "Circum-Uturan Sea"
- STRATEGICREGION_60:0 "Western Indo-Lemurian Ocean"
- STRATEGICREGION_85:0 "Southwest Indo-Lemurian Ocean"
- STRATEGICREGION_330:0 "Cardinal Sea"
- STRATEGICREGION_375:0 "Afro-Lemurian Coast"
- STRATEGICREGION_74:0 "Far Southern Lemurian Ocean"
- STRATEGICREGION_284:0 "Far Eastern Lemurian Ocean"
- STRATEGICREGION_332:0 "Sumatran Sea"
- STRATEGICREGION_338:0 "Western Australia"
- STRATEGICREGION_287:0 "Eastern Scotia Sea"
- STRATEGICREGION_64:0 "Western Scotia Sea"
- STRATEGICREGION_305:0 "Argentine Coast"
- STRATEGICREGION_370:0 "Afro Antarctic Pass"
- STRATEGICREGION_112:0 "Austral Ocean"
- STRATEGICREGION_281:0 "Blauwasser Coast"
- STRATEGICREGION_179:0 "Tahiti Coast"
- STRATEGICREGION_178:0 "Fiji Basin"
- STRATEGICREGION_113:0 "Gulf of Kahane"
- STRATEGICREGION_358:0 "Shark Bay"
- STRATEGICREGION_361:0 "Wallen Coast"
- STRATEGICREGION_275:0 "Ika Coast"
- STRATEGICREGION_360:0 "Manquoria Coast"
- STRATEGICREGION_373:0 "Gulf of Maowe"
- STRATEGICREGION_311:0 "Southern Trynsuyin"
- STRATEGICREGION_310:0 "Northern Trynsuyin"
- STRATEGICREGION_180:0 "Mazu Archipelago"
- STRATEGICREGION_377:0 "Malihini Coast"
- STRATEGICREGION_376:0 "West Central North Pacific"
- STRATEGICREGION_374:0 "Aleutian Coast"
- STRATEGICREGION_56:0 "Western Atlantean Coast"
- STRATEGICREGION_309:0 "Kolpo Bay"
- STRATEGICREGION_312:0 "Eastern Atlantean Coast"
- STRATEGICREGION_44:0 "Greenland Sea"
- STRATEGICREGION_108:0 "Chilean Coast"
- STRATEGICREGION_282:0 "Eastern Austral Ocean"
  STRATEGICREGION_32:0 "Tangata Islands"
- STRATEGICREGION_282:0 "Far Southern Pacific Ocean"
- STRATEGICREGION_362:0 "Tiquean Coast"
- STRATEGICREGION_111:0 "Central Pacific"
+ STRATEGICREGION_44:0 "Greenland Sea"
+ STRATEGICREGION_56:0 "Western Atlantean Coast"
+ STRATEGICREGION_60:0 "Western Indo-Lemurian Ocean"
+ STRATEGICREGION_64:0 "Western Scotia Sea"
+ STRATEGICREGION_67:0 "Atlantic-Scotian Ridge"
+ STRATEGICREGION_71:0 "Circum-Uturan Sea"
+ STRATEGICREGION_74:0 "Far Southern Lemurian Ocean"
+ STRATEGICREGION_85:0 "Southwest Indo-Lemurian Ocean"
  STRATEGICREGION_97:0 "Kanaganesia"
+ STRATEGICREGION_108:0 "Chilean Coast"
+ STRATEGICREGION_111:0 "Central Pacific"
+ STRATEGICREGION_112:0 "Austral Ocean"
+ STRATEGICREGION_113:0 "Gulf of Kahane"
+ STRATEGICREGION_118:0 "Western Mountains"
+ STRATEGICREGION_172:0 "Sea of Hadu"
+ STRATEGICREGION_178:0 "Fiji Basin"
+ STRATEGICREGION_179:0 "Tahiti Coast"
+ STRATEGICREGION_180:0 "Mazu Archipelago"
+ STRATEGICREGION_195:0 "Simpson Sea"
+ STRATEGICREGION_218:0 "Northern California"
+ STRATEGICREGION_220:0 "Labrador"
+ STRATEGICREGION_235:0 "Cascadia"
+ STRATEGICREGION_275:0 "Ika Coast"
+ STRATEGICREGION_276:0 "East Riiser-Larsen Sea"
+ STRATEGICREGION_277:0 "Davis Sea"
+ STRATEGICREGION_278:0 "Mawson Sea"
+ STRATEGICREGION_279:0 "Somov Sea"
+ STRATEGICREGION_280:0 "East Amundsen Sea"
+ STRATEGICREGION_281:0 "Blauwasser Deeps"
+ STRATEGICREGION_282:0 "Far Southern Pacific Ocean"
+ STRATEGICREGION_283:0 "Eastern Austral Ocean"
+ STRATEGICREGION_284:0 "Far Eastern Lemurian Ocean"
+ STRATEGICREGION_285:0 "Canadian Arctic Sea"
+ STRATEGICREGION_286:0 "Canadian Arctic Isles"
+ STRATEGICREGION_287:0 "Eastern Scotia Sea"
+ STRATEGICREGION_288:0 "Blauwasser Coast"
+ STRATEGICREGION_289:0 "Fijnland"
+ STRATEGICREGION_290:0 "Tiquea"
+ STRATEGICREGION_291:0 "Wrightsylvania"
+ STRATEGICREGION_292:0 "Eastern Antarctica"
+ STRATEGICREGION_293:0 "Western Antarctica"
+ STRATEGICREGION_294:0 "Anq-Moarporq Valley"
+ STRATEGICREGION_295:0 "Eastern Plain"
+ STRATEGICREGION_296:0 "Fitzharald Peninsula"
+ STRATEGICREGION_297:0 "Meru Kumari"
+ STRATEGICREGION_298:0 "Werreurbro Peninsula"
+ STRATEGICREGION_299:0 "Artura"
+ STRATEGICREGION_300:0 "Lankr"
+ STRATEGICREGION_301:0 "Kilari Region"
+ STRATEGICREGION_302:0 "Peterstrand"
+ STRATEGICREGION_304:0 "Newfoundland"
+ STRATEGICREGION_305:0 "Aurora Islands"
+ STRATEGICREGION_306:0 "Western Elysian Islands"
+ STRATEGICREGION_307:0 "Eastern Elysian Islands"
+ STRATEGICREGION_308:0 "Eastern Atlantis"
+ STRATEGICREGION_309:0 "Kolpo Bay"
+ STRATEGICREGION_310:0 "Northern Trynsuyin"
+ STRATEGICREGION_311:0 "Southern Trynsuyin"
+ STRATEGICREGION_312:0 "Eastern Atlantean Coast"
+ STRATEGICREGION_313:0 "Lasnovan Coast"
+ STRATEGICREGION_314:0 "Western Atlantis"
+ STRATEGICREGION_315:0 "Northern Geq"
+ STRATEGICREGION_316:0 "Southern Whenuaomaui"
+ STRATEGICREGION_317:0 "Northern Whenuaomaui"
+ STRATEGICREGION_318:0 "Weddell Sea"
+ STRATEGICREGION_319:0 "Ross Sea"
+ STRATEGICREGION_320:0 "West Riiser-Larsen Sea"
+ STRATEGICREGION_321:0 "Lazarev Sea"
+ STRATEGICREGION_322:0 "Drake Passage"
+ STRATEGICREGION_323:0 "West Amundsen Sea"
+ STRATEGICREGION_324:0 "Beaufort Sea"
+ STRATEGICREGION_325:0 "Canaje"
+ STRATEGICREGION_326:0 "Todorovia"
+ STRATEGICREGION_327:0 "Ottosland"
+ STRATEGICREGION_328:0 "Awarurua"
+ STRATEGICREGION_329:0 "Svalbard Sea"
+ STRATEGICREGION_330:0 "Cardinal Sea"
+ STRATEGICREGION_331:0 "Ackerson Desert"
+ STRATEGICREGION_332:0 "Sumatran Sea"
+ STRATEGICREGION_333:0 "Utura Island"
+ STRATEGICREGION_334:0 "Chola Peninsula"
+ STRATEGICREGION_335:0 "Pantiya"
+ STRATEGICREGION_336:0 "Afro-Lemuria"
+ STRATEGICREGION_337:0 "Southern Plain"
+ STRATEGICREGION_338:0 "Western Australia"
+ STRATEGICREGION_339:0 "Goprug"
+ STRATEGICREGION_340:0 "Wüstenland"
+ STRATEGICREGION_341:0 "Western Kumari"
+ STRATEGICREGION_342:0 "Antillia"
+ STRATEGICREGION_343:0 "Southern California"
+ STRATEGICREGION_344:0 "Sea of Cortez"
+ STRATEGICREGION_345:0 "Saugenay Passage"
+ STRATEGICREGION_346:0 "White Bear Sea"
+ STRATEGICREGION_347:0 "Haida Sea"
+ STRATEGICREGION_348:0 "Chinook Sea"
+ STRATEGICREGION_349:0 "Lanikai Peninsula"
+ STRATEGICREGION_350:0 "Western Malihini"
+ STRATEGICREGION_351:0 "Vashparaq"
+ STRATEGICREGION_352:0 "Awa Coast"
+ STRATEGICREGION_353:0 "Magellan's Coast"
+ STRATEGICREGION_354:0 "Northern Hadu"
+ STRATEGICREGION_355:0 "Dustartajare Plain"
+ STRATEGICREGION_356:0 "Southern Geq"
+ STRATEGICREGION_357:0 "Eastern Hadu"
+ STRATEGICREGION_358:0 "Shark Sea"
+ STRATEGICREGION_359:0 "Ikaika"
+ STRATEGICREGION_360:0 "Manquoria Coast"
+ STRATEGICREGION_361:0 "Walen Island"
+ STRATEGICREGION_362:0 "Tiquean Coast"
+ STRATEGICREGION_363:0 "Tahiti"
+ STRATEGICREGION_364:0 "Siberian Arctic Sea"
+ STRATEGICREGION_366:0 "Central Arctic Sea"
+ STRATEGICREGION_368:0 "Baragá"
+ STRATEGICREGION_369:0 "Eastern Africa"
+ STRATEGICREGION_370:0 "Westerlies"
+ STRATEGICREGION_371:0 "The Mouth"
+ STRATEGICREGION_372:0 "Frisland"
+ STRATEGICREGION_373:0 "Gulf of Maowe"
+ STRATEGICREGION_374:0 "Aleutian Coast"
+ STRATEGICREGION_375:0 "Afro-Lemurian Coast"
+ STRATEGICREGION_376:0 "West Central North Pacific"
+ STRATEGICREGION_377:0 "Malihini Coast"
+ STRATEGICREGION_378:0 "Southern Hadu"
+ STRATEGICREGION_379:0 "Western Hadu"
+ STRATEGICREGION_380:0 "Apua'a Coast"
+ STRATEGICREGION_381:0 "Eastern Malihini"
+ STRATEGICREGION_382:0 "Gem Coast"
+ STRATEGICREGION_383:0 "Eastern Kumari"
