Ethiopia and other mods

--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -93,7 +93,7 @@
  STRATEGICREGION_343:0 "Southern California"
  STRATEGICREGION_344:0 "Sea of Cortez"
  STRATEGICREGION_345:0 "Saugenay Passage"
- STRATEGICREGION_346:0 "White Bear Sea"
+ STRATEGICREGION_346:0 "Bonneville Sea"
  STRATEGICREGION_347:0 "Haida Sea"
  STRATEGICREGION_348:0 "Chinook Sea"
  STRATEGICREGION_349:0 "Lanikai Peninsula"
