--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -28,6 +28,9 @@
  PRJ_Christian_fascism_def:0  "the land of Prester John"
  PRJ_Jewish_fascism:0 "Beta Israel"
  PRJ_Jewish_fascism_def:0 "the land of Beta Israel"
+ 
+ NIL_PRJ_duchy_azania:0 "Duchy of Azania"
+ NIL_PRJ_duchy_azania_def:0 "the Duchy of Azania"
  SCP_ENG_autonomy_dominion:0 "Dominion of Scotia"
  SCP_ENG_autonomy_colony:0 "Scotia Confederation"
  SCP_ENG_autonomy_puppet:0 "Province of Scotia"
